[gd_scene load_steps=3 format=3 uid="uid://ci8sq8sp4e4ff"]

[ext_resource type="Script" uid="uid://dat2vo5swiiav" path="res://scene/game/rashodniki_shop/rashodnik_card.gd" id="1_q2r3a"]
[ext_resource type="Texture2D" uid="uid://5efib4wpkokk" path="res://aaasets/items/hot_oil.png" id="2_q2r3a"]

[node name="RashodnikCard" type="Button"]
custom_minimum_size = Vector2(200, 340)
offset_right = 8.0
offset_bottom = 66.0
script = ExtResource("1_q2r3a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("2_q2r3a")
stretch_mode = 3

[node name="Block" type="TextureRect" parent="MarginContainer/VBoxContainer/Control"]
z_index = 3
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RashodnikName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Ice"

[node name="Price" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "700"

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
text = "Buy"

[node name="EquipButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
text = "Equip"

[connection signal="pressed" from="." to="." method="_on_rashodnik_card_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsContainer/EquipButton" to="." method="_on_EquipButton_pressed"]
